[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["wuddz_dapp"]

[project]
name = "wuddz-dapp"
version = "1.0.4"
description = "Multi-Purpose ERC20 Dapp, Create Accounts, Check Balances, Make Transactions, Deploy Verify & Interact With Smart Contracts, Swap ERC20 Tokens, Interact With Exchange Using Api Authentication, Convert Crypto To Crypto Value & Get Token Prices In USD"
readme = "README.md"
authors = [
  { name="Wuddz-Devs", email="wuddz_devs@protonmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
keywords = ["web3", "crypto", "ethereum", "erc20", "trade", "exchange", "dapp", "transactions"]
classifiers = [
		'License :: OSI Approved :: MIT License',
		'Programming Language :: Python',
		'Programming Language :: Python :: 3.7',
		'Programming Language :: Python :: 3.8',
		'Programming Language :: Python :: 3.9',
		'Programming Language :: Python :: 3.10',
]
dependencies = [
        'ccxt',
        'pycoingecko',
        'requests',
        'setuptools',
        'web3'
]

[project.scripts]
wudz-dapp = "wuddz_dapp.dapp:cli_main"
wudz-eapi = "wuddz_dapp.exchange_api:cli_main"

[project.urls]
"Homepage" = "https://github.com/wuddz-devs/wuddz-dapp"
